Bug fix after review

--- a/index.html
+++ b/index.html
@@ -93,6 +93,17 @@
                         </figcaption>
                     </figure>
 
+                    <figure class="designers__item">
+                        <div class="designers__photo-container">
+                            <img class="designers__photo" src="./images/clein.jpg" alt="Photo of Kameron Clein.">
+                        </div>
+                        <figcaption class="designers__info">
+                            <p class="designers__name">Kameron Clein</p> 
+                            <p class="designers__from">Be more flower</p>
+                            <p class="designers__skills">Design Strategy / Marketing</p>
+                        </figcaption>
+                    </figure>
+
                 </div>  
 
             </section>
@@ -110,7 +121,10 @@
                     <img class="testimonials__image_size_large" src="./images/testimonials-1.jpg" alt="Coffeshop interior with a menu on the wall">
                     <div class="testimonials__mission">
                         <p class="testimonials__quote">I just really want to do good work and work with some great people, people who challenge me.</p>
-                        <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
+                        <picture class="testimonials__picture">
+                            <source srcset="./images/testimonials-2small.jpg" media="(max-width: 990px)">
+                            <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
+                        </picture>
                     </div> 
                 </div>  
 
