Add bootsrap for hero-section

--- a/index.html
+++ b/index.html
@@ -13,169 +13,17 @@
 
 </head>
 
-<body class="body">
+        <main>
 
-        <header class="header">
-          <a class="header__link" href="#">Biography</a>
-          <a class="header__link" href="#">Designers</a>
-          <a class="header__link" href="#">Testimonials</a>
-          <a class="header__link" href="#">Strong points</a>
-        </header>
-
-        <main class="content">
-
-            <section class="hero"> 
-                <div class="hero__box">
-                    <h1 class="hero__title">Mod Studio</h1>
-                    <p class="hero__subtitle">Modern Web Studio</p>
+            <section class="hero position-relative d-flex flex-column p-0 m-0"> 
+                <div class="box d-flex flex-column justify-content-center text-center bg-white">
+                    <h1 class="title">Mod Studio</h1>
+                    <p class="subtitle">Modern Web Studio</p>
                 </div>
-            </section>
-
-            <section class="biography">
-                <picture class="biography__picture">
-                    <source srcset="./images/biography_small.jpg" media="(max-width: 990px)">
-                    <img class="biography__image" src="./images/biography.jpg" alt="Photo of Katya Mills.">
-                </picture>
-                <h2 class="biography__title">Biography</h3>
-                <div class="biography__content">
-                    <h3 class="biography__author">Katya Mills</h2>
-                    <p class="biography__position">Art Director</p>
-                    <div class = "biography__job">
-                      <p class="biography__job-item">Scenography</p>
-                      <p class="biography__job-item">Styling</p>
-                      <p class="biography__job-item">Creative Photography</p>
-                      <p class="biography__job-item">Design</p>
-                    </div>
-                    <p class="biography__description">
-                        “The more I deal with the work 
-                        as something that is my own, 
-                        as something that is personal, 
-                        the more successful it is.”
-                    </p>
-                </div>
-            </section>
-
-            <section class="designers">
-
-                <h3 class="designers__title">Designers</h3>
-
-                <div class="designers__line">
-
-                    <figure class="designers__item">
-                        <div class="designers__photo-container">
-                            <img class="designers__photo" src="./images/wonder.jpg" alt="Photo of Jess Wonder.">
-                        </div>
-                        <figcaption class="designers__info">
-                            <p class="designers__name">Jess Wonder</p>
-                            <p class="designers__from">Be more flower</p>
-                            <p class="designers__skills">Design Strategy / Marketing</p>
-                        </figcaption>
-                    </figure>
-
-                    <figure class="designers__item">
-                        <div class="designers__photo-container">
-                            <img class="designers__photo" src="./images/clein.jpg" alt="Photo of Kameron Clein.">
-                        </div>
-                        <figcaption class="designers__info">
-                            <p class="designers__name">Kameron Clein</p> 
-                            <p class="designers__from">Be more flower</p>
-                            <p class="designers__skills">Design Strategy / Marketing</p>
-                        </figcaption>
-                    </figure>
-
-                    <figure class="designers__item">
-                        <div class="designers__photo-container">
-                            <img class="designers__photo" src="./images/red.jpg" alt="Photo of Louisse Red.">
-                        </div>
-                        <figcaption class="designers__info">
-                            <p class="designers__name">Louisse Red</p> 
-                            <p class="designers__from">Be more flower</p>
-                            <p class="designers__skills">Design Strategy / Marketing</p>
-                        </figcaption>
-                    </figure>
-
-                    <figure class="designers__item">
-                        <div class="designers__photo-container">
-                            <img class="designers__photo" src="./images/clein.jpg" alt="Photo of Kameron Clein.">
-                        </div>
-                        <figcaption class="designers__info">
-                            <p class="designers__name">Kameron Clein</p> 
-                            <p class="designers__from">Be more flower</p>
-                            <p class="designers__skills">Design Strategy / Marketing</p>
-                        </figcaption>
-                    </figure>
-
-                </div>  
-
-            </section>
-
-            <section class="testimonials">
-
-                <h2 class="testimonials__title">Testimonials</h2>
-
-                <div class="testimonials__content">
-                    <div class="testimonials__links">
-                        <a class="testimonials__link" href=""><b>Website</b> www.whitepapers.com</a>
-                        <a class="testimonials__link" href=""><b>Creativity</b> www.whitepapers.com</a>
-                        <a class="testimonials__link" href=""><b>Creativity</b> www.whitepapers.com</a>
-                    </div>
-                    <img class="testimonials__image_size_large" src="./images/testimonials-1.jpg" alt="Coffeshop interior with a menu on the wall">
-                    <div class="testimonials__mission">
-                        <p class="testimonials__quote">I just really want to do good work and work with some great people, people who challenge me.</p>
-                        <picture class="testimonials__picture">
-                            <source srcset="./images/testimonials-2small.jpg" media="(max-width: 990px)">
-                            <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
-                        </picture>
-                    </div> 
-                </div>  
-
-            </section>
-
-            <section class="strengths">
-                <h2 class="strengths__title">Strong points</h2>
-                <div class="strengths__content">
-                    <img class="strengths__image" src="./images/strength-1.jpg" alt="Laptop is on the table.">
-                    <img class="strengths__image" src="./images/strength-2.jpg" alt="Stylish interior with round armchair with pillows.">
-                    <div class="strengths__links">
-                        <h3 class="strengths__subtitle"><a class="strengths__link" href="#">Strengths</a></h3>
-                        <ul class="strengths__list">
-                            <li class="strengths__item">
-                                <a class="strengths__link" href="#">Interiors</a></li>
-                            <li class="strengths__item">
-                                <a class="strengths__link" href="#">Outdoors</a></li>
-                            <li class="strengths__item">
-                                <a class="strengths__link" href="#">Portraits</a></li>
-                            <li class="strengths__item">
-                                <a class="strengths__link" href="#">Styling</a></li>
-                            <li class="strengths__item">
-                                <a class="strengths__link" href="#">Events</a></li>
-                            <li class="strengths__item">
-                                <a class="strengths__link" href="#">Architecture</a></li>
-                            <li class="strengths__item">
-                                <a class="strengths__link" href="#">Design</a></li>
-                            <li class="strengths__item">
-                                <a class="strengths__link" href="#">Celebrations</a></li>
-                            <li class="strengths__item">
-                                <a class="strengths__link" href="#">Artistic</a></li>
-                            <li class="strengths__item">
-                                <a class="strengths__link" href="#">Fashion</a></li>
-                            <li class="strengths__item">
-                                <a class="strengths__link" href="#">Nature</a></li>
-                            <li class="strengths__item">
-                                <a class="strengths__link" href="#">Creativity</a></li>
-                        </ul>
-                    </div>
-                    <img class="strengths__image" src="./images/strength-2.jpg" alt="Stylish interior with round armchair with pillows/">
-                </div>
+                <img class ="image w-100" style="max-height: 630px;" src="./images/header.jpg" alt="Stylish interior." >
             </section>
 
         </main>
 
-        <div class="footer__menu">
-          <a class="footer__link" href="">B</a>
-          <a class="footer__link" href="">D</a>
-          <a class="footer__link" href="">T</a>
-          <a class="footer__link" href="">S</a>
-        </div>
 </body>
 </html>
