Add header html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
 </head>
 
+        <header class="header container p-0">
+            <a class="header__link" href="#">Biography</a>
+            <a class="header__link" href="#">Designers</a>
+            <a class="header__link" href="#">Testimonials</a>
+            <a class="header__link" href="#">Strong points</a>
+        </header>
+
         <main>
 
             <section class="hero position-relative d-flex flex-column p-0 m-0"> 
