--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
 </head>
 
-        <header class="header container p-0">
-            <a class="header__link" href="#">Biography</a>
-            <a class="header__link" href="#">Designers</a>
-            <a class="header__link" href="#">Testimonials</a>
-            <a class="header__link" href="#">Strong points</a>
+        <header class="d-none d-md-flex flex-row p-0 justify-content-end align-items-center" style="margin-right: 20px; min-height: 135px; gap: 55px;">
+            <a class="text" href="#">Biography</a>
+            <a class="text" href="#">Designers</a>
+            <a class="text" href="#">Testimonials</a>
+            <a class="text" href="#">Strong points</a>
         </header>
 
         <main>
 
-            <section class="hero position-relative d-flex flex-column p-0 m-0"> 
+            <section class="container-fluid position-relative d-flex flex-column p-0"> 
                 <div class="box d-flex flex-column justify-content-center text-center bg-white">
                     <h1 class="title">Mod Studio</h1>
                     <p class="subtitle">Modern Web Studio</p>
