--- a/index.html
+++ b/index.html
@@ -15,20 +15,24 @@
 
 <body class="body">
 
-        <header class="header">
-            <button type="button" class="header__menu">
-                <img src="./images/Menu.png" alt="Menu button." class="header__image">
-            </button>  
-        </header>
+    <header class="d-none d-md-flex flex-row p-0 justify-content-end align-items-center" style="margin-right: 20px; min-height: 135px; gap: 55px;">
+        <a class="text" href="#">Biography</a>
+        <a class="text" href="#">Designers</a>
+        <a class="text" href="#">Testimonials</a>
+        <a class="text" href="#">Strong points</a>
+    </header>
 
-        <main class="content">
+    <main>
 
-            <section class="hero"> 
-                <div class="hero__box">
-                    <h1 class="hero__title">Mod Studio</h1>
-                    <p class="hero__subtitle">Modern Web Studio</p>
-                </div>
-            </section>
+        <section class="container-fluid position-relative d-flex flex-column p-0"> 
+            <div class="box d-flex flex-column justify-content-center text-center bg-white">
+                <h1 class="title">Mod Studio</h1>
+                <p class="subtitle">Modern Web Studio</p>
+            </div>
+            <img class ="image w-100" style="max-height: 630px;" src="./images/header.jpg" alt="Stylish interior." >
+        </section>
+
+    </main>
 
         </main>
 
