--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="body">
 
-    <header class="d-none d-md-flex flex-row p-0 justify-content-end align-items-center" style="margin-right: 20px; min-height: 135px; gap: 55px;">
+    <header class="hidden md:flex flex-row p-0 justify-end items-center" style="margin-right: 20px; min-height: 135px; gap: 55px;">
         <a class="text" href="#">Biography</a>
         <a class="text" href="#">Designers</a>
         <a class="text" href="#">Testimonials</a>
@@ -24,12 +24,12 @@
 
     <main>
 
-        <section class="container-fluid position-relative d-flex flex-column p-0"> 
-            <div class="box d-flex flex-column justify-content-center text-center bg-white">
-                <h1 class="title">Mod Studio</h1>
-                <p class="subtitle">Modern Web Studio</p>
+        <section class="relative flex flex-col p-0"> 
+            <div class="box flex flex-col justify-center text-center bg-white">
+                <h1 class="title font-normal md:font-medium">Mod Studio</h1>
+                <p class="text-lg font-medium md:text-xl">Modern Web Studio</p>
             </div>
-            <img class ="image w-100" style="max-height: 630px;" src="./images/header.jpg" alt="Stylish interior." >
+            <img class ="image w-full" style="max-height: 630px;" src="./images/header.jpg" alt="Stylish interior." >
         </section>
 
     </main>
