--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="body">
 
-    <header class="hidden md:flex flex-row p-0 justify-end items-center" style="margin-right: 20px; min-height: 135px; gap: 55px;">
+    <header class="hidden md:flex flex-row p-0 justify-end items-center mr-20 min-h-135 gap-55">
         <a class="text" href="#">Biography</a>
         <a class="text" href="#">Designers</a>
         <a class="text" href="#">Testimonials</a>
@@ -29,7 +29,7 @@
                 <h1 class="title font-normal md:font-medium">Mod Studio</h1>
                 <p class="text-lg font-medium md:text-xl">Modern Web Studio</p>
             </div>
-            <img class ="image w-full" style="max-height: 630px;" src="./images/header.jpg" alt="Stylish interior." >
+            <img class ="image w-full max-h-630" src="./images/header.jpg" alt="Stylish interior." >
         </section>
 
     </main>
