--- a/src/index.html
+++ b/src/index.html
@@ -8,36 +8,36 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Playfair+Display:wght@500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./index.css">
 
 </head>
 
 <body class="body">
 
         <header class="header">
-          <a class="header__link" href="#">Biography</a>
-          <a class="header__link" href="#">Designers</a>
-          <a class="header__link" href="#">Testimonials</a>
-          <a class="header__link" href="#">Strong points</a>
+          <a class="header__link" href="#biography">Biography</a>
+          <a class="header__link" href="#designers">Designers</a>
+          <a class="header__link" href="#testimonials">Testimonials</a>
+          <a class="header__link" href="#strengths">Strong points</a>
         </header>
 
         <main class="content">
 
-            <section class="hero"> 
+            <section class="hero" id="hero"> 
                 <div class="hero__box">
                     <h1 class="hero__title">Mod Studio</h1>
                     <p class="hero__subtitle">Modern Web Studio</p>
                 </div>
             </section>
 
-            <section class="biography">
+            <section class="biography" id="biography">
                 <picture class="biography__picture">
                     <source srcset="./images/biography_small.jpg" media="(max-width: 990px)">
                     <img class="biography__image" src="./images/biography.jpg" alt="Photo of Katya Mills.">
                 </picture>
                 <h2 class="biography__title">Biography</h3>
                 <div class="biography__content">
-                    <h3 class="biography__author">Katya Mills</h2>
+                    <h2 class="biography__author">Katya Mills</h2>
                     <p class="biography__position">Art Director</p>
                     <div class = "biography__job">
                       <p class="biography__job-item">Scenography</p>
@@ -54,14 +54,14 @@
                 </div>
             </section>
 
-            <section class="designers">
+            <section class="designers" id="designers">
 
-                <h3 class="designers__title">Designers</h3>
+                <h2 class="designers__title">Designers</h2>
 
                 <div class="designers__line">
 
                     <figure class="designers__item">
-                        <div class="designers__photo-container">
+                        <div class="designers__photo-container designers__photo-container_resized">
                             <img class="designers__photo" src="./images/wonder.jpg" alt="Photo of Jess Wonder.">
                         </div>
                         <figcaption class="designers__info">
@@ -104,13 +104,33 @@
                         </figcaption>
                     </figure>
 
+                    <figure class="designers__item">
+                        <div class="designers__photo-container">
+                            <img class="designers__photo" src="./images/wonder.jpg" alt="Photo of Jess Wonder.">
+                        </div>
+                        <figcaption class="designers__info">
+                            <p class="designers__name">Jess Wonder</p>
+                            <p class="designers__from">Be more flower</p>
+                            <p class="designers__skills">Design Strategy / Marketing</p>
+                        </figcaption>
+                    </figure>
+
+                    <figure class="designers__item">
+                        <div class="designers__photo-container">
+                            <img class="designers__photo" src="./images/clein.jpg" alt="Photo of Kameron Clein.">
+                        </div>
+                        <figcaption class="designers__info">
+                            <p class="designers__name">Kameron Clein</p> 
+                            <p class="designers__from">Be more flower</p>
+                            <p class="designers__skills">Design Strategy / Marketing</p>
+                        </figcaption>
+                    </figure>
+
                 </div>  
 
             </section>
 
-            <section class="testimonials">
-
-                <h2 class="testimonials__title">Testimonials</h2>
+            <section class="testimonials" id="testimonials">
 
                 <div class="testimonials__content">
                     <div class="testimonials__links">
@@ -118,19 +138,20 @@
                         <a class="testimonials__link" href=""><b>Creativity</b> www.whitepapers.com</a>
                         <a class="testimonials__link" href=""><b>Creativity</b> www.whitepapers.com</a>
                     </div>
-                    <img class="testimonials__image_size_large" src="./images/testimonials-1.jpg" alt="Coffeshop interior with a menu on the wall">
+                    <img class="testimonials__image testimonials__image_size_large" src="./images/testimonials-1.jpg" alt="Coffeshop interior with a menu on the wall">
+                    <h2 class="testimonials__title">Testimonials</h2>
                     <div class="testimonials__mission">
                         <p class="testimonials__quote">I just really want to do good work and work with some great people, people who challenge me.</p>
                         <picture class="testimonials__picture">
                             <source srcset="./images/testimonials-2small.jpg" media="(max-width: 990px)">
-                            <img class="testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
+                            <img class="testimonials__image testimonials__image_size_small" src="./images/testimonials-2.jpg" alt="Model holding a shopping bag with magazines.">
                         </picture>
                     </div> 
                 </div>  
 
             </section>
 
-            <section class="strengths">
+            <section class="strengths" id="strengths">
                 <h2 class="strengths__title">Strong points</h2>
                 <div class="strengths__content">
                     <img class="strengths__image" src="./images/strength-1.jpg" alt="Laptop is on the table.">
@@ -155,13 +176,9 @@
                             <li class="strengths__item">
                                 <a class="strengths__link" href="#">Celebrations</a></li>
                             <li class="strengths__item">
-                                <a class="strengths__link" href="#">Artistic</a></li>
-                            <li class="strengths__item">
                                 <a class="strengths__link" href="#">Fashion</a></li>
                             <li class="strengths__item">
                                 <a class="strengths__link" href="#">Nature</a></li>
-                            <li class="strengths__item">
-                                <a class="strengths__link" href="#">Creativity</a></li>
                         </ul>
                     </div>
                     <img class="strengths__image" src="./images/strength-2.jpg" alt="Stylish interior with round armchair with pillows/">
@@ -170,11 +187,14 @@
 
         </main>
 
-        <div class="footer__menu">
-          <a class="footer__link" href="">B</a>
-          <a class="footer__link" href="">D</a>
-          <a class="footer__link" href="">T</a>
-          <a class="footer__link" href="">S</a>
-        </div>
+        <footer class="footer">
+            <div class="footer__menu">
+                <a class="footer__link" href="#biography">B</a>
+                <a class="footer__link" href="#designers">D</a>
+                <a class="footer__link" href="#testimonials">T</a>
+                <a class="footer__link" href="#strengths">S</a>
+            </div>
+        </footer>
+
 </body>
 </html>
